--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "openmeteo": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
